# Traiding

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  Best Plan to Hand Codex for an AI Trading App Built From Six Instagram Ideas.docx  CLAUDE.md  DEVELOPMENT.md  FABLE5_BUILD_PROMPT.md  Makefile  README.md  RESEARCH_SUPPLEMENT.md  compose.yaml  package-lock.json  package.json  pyproject.toml
docs/: COMPLIANCE_NOTES.md  DATA_SOURCES.md  EVALS.md  IMPLEMENTATION_PLAN.md  PHASE_02_SCHEMA_DECISIONS.md  PHASE_03_MAPPING_DECISIONS.md  PHASE_04_DATA_DECISIONS.md  PHASE_06_RESEARCH_DECISIONS.md  PHASE_07_APPROVAL_DECISIONS.md  PHASE_08_UI_DECISIONS.md  PHASE_09_RELEASE_ACCEPTANCE_DECISIONS.md  PHASE_10_LOCAL_PAPER_DECISIONS.md  PHASE_11_PORTABLE_SIMULATION_EVIDENCE_DECISIONS.md  PHASE_12_EXTERNAL_PAPER_SHADOW_READINESS_DECISIONS.md  PHASE_13_POINT_IN_TIME_DATA_QUALIFICATION_DECISIONS.md  PHASE_14_RESEARCH_INGESTION_ELIGIBILITY_DECISIONS.md  PHASE_15_FAMILY_A_RESEARCH_ADMISSION_SPECIFICATION.json  PHASE_15_FAMILY_A_RESEARCH_ADMISSION_SPECIFICATION_DECISIONS.md  PHASE_16_FAMILY_A_POINT_IN_TIME_SOURCE_PLAN.json  PHASE_16_FAMILY_A_POINT_IN_TIME_SOURCE_PLAN_DECISIONS.md  PHASE_17_FAMILY_A_CANDIDATE_PRODUCT_INVENTORY.json  PHASE_17_FAMILY_A_CANDIDATE_PRODUCT_INVENTORY_DECISIONS.md  PHASE_18_FAMILY_A_CURRENT_USE_RIGHTS_REVIEW.json  PHASE_18_FAMILY_A_CURRENT_USE_RIGHTS_REVIEW_DECISIONS.md  PHASE_19_FAMILY_A_STEP3_PREREQUISITE_ASSESSMENT.json  PHASE_19_FAMILY_A_STEP3_PREREQUISITE_ASSESSMENT_DECISIONS.md  PHASE_20_FAMILY_A_EVALUATION_HOLDOUT_INPUT_REGISTER.json  PHASE_20_FAMILY_A_EVALUATION_HOLDOUT_INPUT_REGISTER_DECISIONS.md  PHASE_21_FAMILY_A_OPERATIONAL_COMPOSITION_DECISION_REQUIREMENTS.json  PHASE_21_FAMILY_A_OPERATIONAL_COMPOSITION_DECISION_REQUIREMENTS_DECISIONS.md  PHASE_22_FAMILY_A_MACRO_VINTAGE_CANDIDATE_INVENTORY_AMENDMENT.json  PHASE_22_FAMILY_A_MACRO_VINTAGE_CANDIDATE_INVENTORY_AMENDMENT_DECISIONS.md  PHASE_23_FAMILY_A_RTDSM_CURRENT_USE_RIGHTS_REVIEW.json  PHASE_23_FAMILY_A_RTDSM_CURRENT_USE_RIGHTS_REVIEW_DECISIONS.md  PHASE_24_FAMILY_A_RTDSM_RIGHTS_CLARIFICATION_REQUIREMENTS.json  PHASE_24_FAMILY_A_RTDSM_RIGHTS_CLARIFICATION_REQUIREMENTS_DECISIONS.md  PHASE_25_FAMILY_A_RTDSM_RIGHTS_RESPONSE_AND_ADAPTER_PATTERNS.json  PHASE_25_FAMILY_A_RTDSM_RIGHTS_RESPONSE_AND_ADAPTER_PATTERNS_DECISIONS.md  PHASE_26_FAMILY_A_OPERATIONAL_DATA_COMPOSITION_DECISION.json  PHASE_26_FAMILY_A_OPERATIONAL_DATA_COMPOSITION_DECISIONS.md  (+11 more)
scripts/: assess_research_ingestion_eligibility.py  capture_alpaca_iex_observation_pilot.py  capture_paper_shadow_readiness.py  capture_point_in_time_data_qualification.py  check.ps1  check.sh  export_openapi.py  generate_family_a_candidate_product_inventory.py  generate_family_a_current_use_rights_review.py  generate_family_a_evaluation_holdout_input_register.py  generate_family_a_macro_vintage_candidate_inventory_amendment.py  generate_family_a_operational_composition_decision_requirements.py  generate_family_a_operational_data_composition_decision.py  generate_family_a_point_in_time_source_plan.py  generate_family_a_research_admission_specification.py  generate_family_a_rights_and_entitlement_evidence_intake.py  generate_family_a_rtdsm_current_use_rights_review.py  generate_family_a_rtdsm_rights_clarification_requirements.py  generate_family_a_rtdsm_rights_response_and_adapter_patterns.py  generate_family_a_step3_prerequisite_assessment.py  preflight_paper_smoke.py  report_paper_shadow_readiness.py  test.ps1  (+19 more)
(+469 files in other folders)
