[build-system]
requires = ["setuptools==82.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fable5-platform"
version = "0.1.0"
description = "Research-to-paper-trading platform scaffold"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  "alembic==1.18.5",
  "fastapi==0.139.0",
  "psycopg[binary]==3.3.4",
  "pydantic-settings==2.14.2",
  "redis==8.0.1",
  "rq==2.10.0",
  "sqlalchemy==2.0.51",
  "uvicorn[standard]==0.51.0",
]

[project.optional-dependencies]
dev = [
  "httpx2==2.5.0",
  "mypy==2.3.0",
  "pytest==9.1.1",
  "pytest-asyncio==1.4.0",
  "pyyaml==6.0.3",
  "ruff==0.15.21",
]

[tool.setuptools.packages.find]
where = [
  "services/api/src",
  "services/backtester/src",
  "services/data/src",
  "services/extraction/src",
  "services/jobs/src",
  "services/mapping/src",
  "services/research/src",
]

[tool.setuptools.package-data]
fable5_data = ["fixtures/*.json"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = [
  "tests",
  "services/api/tests",
  "services/backtester/tests",
  "services/data/tests",
  "services/extraction/tests",
  "services/jobs/tests",
  "services/mapping/tests",
  "services/research/tests",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["packages/contracts/src/api.generated.ts"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
files = [
  "services/api/src",
  "services/backtester/src",
  "services/data/src",
  "services/extraction/src",
  "services/jobs/src",
  "services/mapping/src",
  "services/research/src",
]
mypy_path = [
  "services/api/src",
  "services/backtester/src",
  "services/data/src",
  "services/extraction/src",
  "services/jobs/src",
  "services/mapping/src",
  "services/research/src",
]
